B2 Streams - Alle 9 Aufgaben erfolgreich implementiert